# bracelet_solver

./: .gitignore  AUTHORS  COPYING  Makefile  Makefile.am  NEWS  README.md  bracelet_solver.cc  configure.ac  index.html  pat2design.cc
doc/: design2.txt  design75808.txt  pat2.txt  pat75808.txt
src/: Makefile.am  bracelet_solver.cc  getopt.cc  knotcolors.cc  knotcolors.h  pat2design.cc  pattern.cc  pattern.h  programopts.cc  programopts.h  status.cc  status.h  utils.cc  utils.h
