
bin_PROGRAMS = bracelet_solver pat2design

bracelet_solver_SOURCES = bracelet_solver.cc knotcolors.cc pattern.cc \
			  utils.cc status.cc programopts.cc getopt.cc \
			  knotcolors.h pattern.h \
			  utils.h status.h programopts.h getopt.h

pat2design_SOURCES = pat2design.cc utils.cc status.cc \
		     utils.h status.h


